--- a/post1.html
+++ b/post1.html
@@ -88,7 +88,7 @@
 
           </p> 
 
-          <h2 class="section-heading">Does the page use conventions?</h2>
+          <h2 class="section-heading">the page use conventions?</h2>
 
           <p>They use some conventions like the placement of the logo on the top left and having a menu bar along the
             top. They also use the social media logos making it clear that you can access them through Facebook and
