--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div class="row">
       <div class="col-lg-4 col-md-12">
         <div class="list-group">
-          <a href="index.html" class="list-group-item">Corgis</a>
+          <!--<a href="index.html" class="list-group-item">Corgis</a> -->
 
         </div>
       </div>
