finished post 2 final

--- a/post2.html
+++ b/post2.html
@@ -69,7 +69,7 @@
               <h1>Usable Design Analysis</h1>
             </center>
             <center>
-              <h2 class="subheading">My thoughts on the usability of Alpine Animal Hospital's website
+              <h2 class="subheading">My thoughts on the design of Alpine Animal Hospital's website
             </center>
             </h2>
             <center><span class="meta">Posted by
