--- a/post2.html
+++ b/post2.html
@@ -103,7 +103,7 @@
               for Alpine Animal Hospital.</p>
 
             <a href="#">
-              <img class="img-fluid" src="img/Screeb Shot 1a.png" alt="">
+              <img class="img-fluid" src="img/Screen Shot 1.png" alt="">
             </a>
             <p></p>
 
@@ -116,7 +116,7 @@
               access a sub page.</p>
 
             <a href="#">
-              <img class="img-fluid" src="img/Screen Shot 1b.png" alt="">
+              <img class="img-fluid" src="img/Screen Shot 1.png" alt="">
             </a>
             <p></p>
 
@@ -130,6 +130,7 @@
             <a href="#">
               <img class="img-fluid" src="img/Screen Shot 3.png" alt="">
             </a>
+            <p></p>
 
             <li><u><b>Method to get Home</b></u></li>
 
