finished post 2 final

--- a/post2.html
+++ b/post2.html
@@ -103,7 +103,7 @@
               for Alpine Animal Hospital.</p>
 
             <a href="#">
-              <img class="img-fluid" src="img/Screen Shot 1.png" alt="">
+              <img class="img-fluid" src="img/Screeb Shot 1a.png" alt="">
             </a>
             <p></p>
 
@@ -116,7 +116,7 @@
               access a sub page.</p>
 
             <a href="#">
-              <img class="img-fluid" src="img/Screen Shot 1.png" alt="">
+              <img class="img-fluid" src="img/Screen Shot 1b.png" alt="">
             </a>
             <p></p>
 
