--- a/post2.html
+++ b/post2.html
@@ -102,10 +102,10 @@
               this site is related to veterinary services. It provides a clear cue to the user that this is the website
               for Alpine Animal Hospital.</p>
 
-            <a href="#">
-              <img class="img-fluid" src="Screeb Shot 1a.png" alt="">
-            </a>
-            <p></p>
+              <a href="#">
+                <img class="img-fluid" src="img/Logo.png" alt="">
+              </a>
+              <p></p>
 
             <li><u><b>The sections of the site</b></u></li>
 
@@ -115,10 +115,10 @@
               link brings you to a new page while others only have sub menus and you have to click on the sub menu to
               access a sub page.</p>
 
-            <a href="#">
-              <img class="img-fluid" src="Screen Shot 1b.png" alt="">
-            </a>
-            <p></p>
+              <a href="#">
+                <img class="img-fluid" src="img/Menu.png" alt="">
+              </a>
+              <p></p>
 
 
             <li><u><b>Utilities</b></u></li>
