finished usability test

--- a/post3.html
+++ b/post3.html
@@ -124,7 +124,7 @@
                     </ul>
 
                     <p>After the test, I looked back at the videos and noted how much time and the number of actions
-                        performed on each task.</p>
+                        performed on each task.  The full test script can be found <a href="img/Post 3 img/Test Script.pdf"><u>here</u>.</a></p>
 
                     <h3 class="subsection">Number and demographic summary of participants</h3>
 
