--- a/post2.html
+++ b/post2.html
@@ -96,18 +96,18 @@
           <p></p>
 
           <ul>
-            <li><u><b>Site ID</b></u></li>
+            <li><b>Site ID</b></li>
 
             <p>It has a good site id of the clinic’s logo, located in the upper left-hand corner. It clearly shows that
               this site is related to veterinary services. It provides a clear cue to the user that this is the website
               for Alpine Animal Hospital.</p>
 
               <a href="#">
-                <img class="img-fluid" src="img/Logo.png" alt="">
+                <img class="img-fluid" src="img/Logo.png" alt="Image highlighting company logo">
               </a>
               <p></p>
 
-            <li><u><b>The sections of the site</b></u></li>
+            <li><b>The sections of the site</b></li>
 
             <p>The primary navigation is located on the upper right-side of the page. It includes the things that I
               would expect to see on a veterinarian’s website such as home, about us, services, patients and contact us.
@@ -116,33 +116,33 @@
               access a sub page.</p>
 
               <a href="#">
-                <img class="img-fluid" src="img/Menu.png" alt="">
+                <img class="img-fluid" src="img/Menu.png" alt="Image of company menu bar">
               </a>
               <p></p>
 
 
-            <li><u><b>Utilities</b></u></li>
+            <li><b>Utilities</b></li>
 
             <p>There are utilities in the blue bar along the top, but it’s kind of hidden between the address and phone
               number which are duplicated in the footer. There are additional utilities in the footer, however some like
               the pet portal generate a ‘404’ error page.</p>
 
             <a href="#">
-              <img class="img-fluid" src="img/Screen Shot 3.png" alt="">
+              <img class="img-fluid" src="img/Screen Shot 3.png" alt="Image telling user the link doesn't work">
             </a>
             <p></p>
 
-            <li><u><b>Method to get Home</b></u></li>
+            <li><b>Method to get Home</b></li>
 
             <p>There is a clear home button and the main menu is accessible from most pages except the online store
               which opens up a new browser tab. This page does not have the same navigation. It took me a second to
               realize that a new tab had opened which confused me about getting back to other parts of the website. </p>
 
             <a href="#">
-              <img class="img-fluid" src="img/Screen Shot 4.png" alt="">
+              <img class="img-fluid" src="img/Screen Shot 4.png" alt="Image of menu for online store">
             </a>
 
-            <li><u><b>Method to Search </b></u></li>
+            <li><b>Method to Search </b></li>
 
             <p>There is only a search bar on the online store page. It’s a pretty simple website so it is not that hard
               to find things.</p>
@@ -159,23 +159,23 @@
           <p></p>
 
           <ul>
-            <li><u><b>Page Names </b></u></li>
+            <li><b>Page Names </b></li>
 
             <p>Each page has a page name that matches the menu used to access it. It also nicely frames the content on
               each page.
             </p>
-            <li><u><b>Page navigation</b></u></li>
+            <li><b>Page navigation</b></li>
 
             <p>Except the online store, each page has the site id as well as the content and utility menus. Your
               location in the content menu is underlined green and the sub menu location is highlighted blue. The page
               doesn’t use breadcrumbs but the site is simple enough that they are not needed.</p>
 
             <a href="#">
-              <img class="img-fluid" src="img/Screen Shot 5.png" alt="">
+              <img class="img-fluid" src="img/Screen Shot 5.png" alt="Image highlighting content menu functionality">
             </a>
             <p></p>
 
-            <li><u><b>Page content</b></u></li>
+            <li><b>Page content</b></li>
           </ul>
           <p>The material is what I would expect to see based on the name of the page. It seems very well organized and
             provides sufficient information on each topic.</p>
