--- a/post2.html
+++ b/post2.html
@@ -50,7 +50,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="about.html">About a</a>
           </li>
         </ul>
       </div>
