--- a/post2.html
+++ b/post2.html
@@ -50,7 +50,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About a</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
         </ul>
       </div>
@@ -59,7 +59,7 @@
 
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/blue banner.jpg')">
+  <header class="masthead" style="background-image: url('img/blue banner 1.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
