--- a/post4.html
+++ b/post4.html
@@ -59,7 +59,7 @@
 
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/blue banner.jpg')">
+    <header class="masthead" style="background-image: url('img/blue banner 1.jpg')">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
