--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/blue banner.jpg')">
+  <header class="masthead" style="background-image: url('img/blue banner 1.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
