--- a/post2.html
+++ b/post2.html
@@ -205,7 +205,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <ul class="list-inline text-center">
             <li class="list-inline-item">
-              <a href="#">
+              <a target="_blank" href="https://www.twitter.com" class="twitter">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
@@ -213,7 +213,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a target="_blank" href="https://www.facebook.com" class="facebook">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
@@ -221,7 +221,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a target="_blank" href="https://www.github.com" class="github">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-github fa-stack-1x fa-inverse"></i>
