--- a/post0.html
+++ b/post0.html
@@ -149,7 +149,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <ul class="list-inline text-center">
             <li class="list-inline-item">
-              <a href="#">
+              <a target="_blank" href="https://www.twitter.com" class="twitter">Link to Twitter
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
@@ -157,7 +157,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a target="_blank" href="https://www.facebook.com" class="facebook">Link to Facebook
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
@@ -165,7 +165,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a target="_blank" href="https://www.github.com" class="github">Link to Github
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-github fa-stack-1x fa-inverse"></i>
