--- a/post2 old.html
+++ b/post2 old.html
@@ -60,7 +60,7 @@
 
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/blue banner 1.jpg')">
+  <header class="masthead" style="background-image: url('img/blue banner old.JPG')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
