--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
               <a class="dropdown-item" href="post1.html">Post 1</a>
-              <a class="dropdown-item" href="post2 old.html">Post 2</a>
+              <a class="dropdown-item" href="post2old.html">Post 2 old</a>
               <a class="dropdown-item" href="post2.html">Post 2</a>
               <a class="dropdown-item" href="post3.html">Post 3</a>
               <a class="dropdown-item" href="post4.html">Post 4</a>
