--- a/post1.html
+++ b/post1.html
@@ -46,7 +46,7 @@
               Blog
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="post1.html">Post 1</a>
+              <a class="dropdown-item" href="index.html">Home</a>
             </div>
           </li>
           <li class="nav-item">
