--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2019</p>
+          <p class="copyright text-muted">Copyright &copy; meghanecahill.com 2020</p>
         </div>
       </div>
     </div>
