--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Jane Student</a>
+      <a class="navbar-brand" href="index.html">Meghan Cahill</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
@@ -59,7 +59,7 @@
 
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/about-bg.jpg')">
+  <header class="masthead" style="background-image: url('img/blue banner 1.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -77,13 +77,13 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-12 mx-auto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates
-          odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto
-          error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas
-          voluptatibus, minus!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex
-          itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+        <p>I am currently a student at Seattle University working toward a certificate in web development</p>
+        <p>I love animals, particularly corgis!</p>
+
+        <a href="#">
+          <img class="img-fluid" src="img/Post 7 img/Corgis copy 2.42.09 PM.jpg" alt="Picture of two corgis">
+      </a>
+        
       </div>
     </div>
 
