--- a/post7.html
+++ b/post7.html
@@ -159,15 +159,18 @@
                         <p>My initial assumption that most people would use my site in the evening, turned out to be
                             false. 67% used it before noon, 21% used it between noon and 5:00 pm and only 13% used it
                             6:00 pm or after. I suspected that people have more spare time in the evening so I was
-                            surprised to see that they used it the most in the evening.</p>
+                            surprised to see that they used it the most in the morning.</p>
 
                         <h3>Type of device users use to access the site most</h3>
-                        <p></p>
+                        
 
                         <a href="#">
                             <img class="img-fluid" src="img/Post 7 img/Device used.jpg" alt="Chart of usage by device">
                         </a>
                         <p></p>
+                        <p>I assumed that most people would use a mobile device to view my website. I thought they would
+                            see the email on their phone and then go straight to the link. However, most people used a
+                            desktop device (over 54%).</p>
 
                         <h3>Most popular pages in the site</h3>
                         <p></p>
@@ -179,11 +182,11 @@
                         <p>Without considering the home page, I thought that my latest blog post six would be the most
                             popular since that one is listed at the top of the page. Obviously, the home page was the
                             most popular because people have to navigate through it to get to the blogs. Of the blog
-                            pages my post 6 was the most popular with 41 pageviews. </p>
+                            pages my post 6 was the most popular with 41 page views. </p>
                         <p></p>
                         <h2 class="section-heading">Conclusion</h2>
 
-                        <p>Using Google Analytics was fun and I especially enjoyed seeing people in real time and where
+                        <p>Using Google Analytics was fun and I especially enjoyed seeing people in real time, where
                             they were from and what parts of the site they were viewing. It is very helpful to have data
                             in order to know whether your website is matching your expectations. It allows you to make
                             changes as needed to make your page meet your goals. I learned that I am very bad at making
