--- a/post4.html
+++ b/post4.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <script src="https://www.googleoptimize.com/optimize.js?id=OPT-NF5FDVL"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167055423-1"></script>
 <script>
